# delta-review

./: .gitignore  LICENSE  README.md  design-doc.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: review-workflow-final-fix-report.md  review-workflow-task-5-report.md
assets/: build_banner.js  how-delta-works.pptx
delta-assets/: build_banner.js  build_banner.test.js
docs/: performance.md
docs/superpowers/plans/: 2026-07-16-delta-public-mvp.md
docs/superpowers/specs/: 2026-07-16-delta-public-tool-design.md
scripts/: smoke_wheel.py
src/delta_review/: app.py  cli.py  config.py  models.py  security.py
src/delta_review/gitlab/: __init__.py  client.py  diffs.py  discussions.py  positions.py
src/delta_review/static/: index.html
tests/: test_api.py  test_cli.py  test_config.py  test_diffs.py  test_discussions.py  test_gitlab_client.py  test_packaging.py  test_positions.py  test_security.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: diff-performance.spec.ts
web/scripts/: benchmark-diff.mjs
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  types.ts
web/src/review/: CommentComposer.tsx  DiffViewer.tsx  DiscussionThread.tsx  ErrorState.tsx  FileTree.tsx  GeneralDiscussionsPanel.tsx  ReviewerMark.test.tsx  ReviewerMark.tsx  diffAdapter.test.ts  diffAdapter.ts  diffStats.test.ts  diffStats.ts  diffWorker.ts  discussionCache.ts  discussionRange.test.ts  discussionRange.ts  dragSelection.test.ts  dragSelection.ts  selection.test.ts  selection.ts
web/src/test/: server.ts  (+8 more)
(+39 files in other folders)
